# ndate

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README  README.md  build.sh
.github/workflows/: main.yml  test.yml
debian/: changelog  control  copyright  rules  watch
debian/upstream/: metadata
nepdate-test-app/: Cargo.toml
nepdate-test-app/src/: main.rs
src/: CMakeLists.txt  bikram.h  bikram.rs  lib.rs  main.cpp  main.rs
