[package]
name = "nepdate-cli"
version = "0.1.3"
edition = "2021"
authors = ["Khumnath <nath.khum@gmail.com>"]

[lib]
name = "nepdate"
path = "src/bikram.rs"

# Optional metadata
description = "bikram sambat calendar library(nepalidate using bikram library)." 
license = "GPL-3.0"
repository = "https://github.com/khumnath/nepdate-cli/tree/rust"

[dependencies]
chrono = "0.4"
